k8s/workloads/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-ingress-class: traefik
spec:
  tls:
  - hosts:
    - backend.example.com
    secretName: backend-tls
spec:
  rules:
  - host: api-backend.election.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8089
